# RyMPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt
Examples/active_target/: CMakeLists.txt  launch  p0.cxx  p1.cxx
Lib/RyMPI/: Runtime.hpp  Runtime.hxx
